landing-page: fix bg stretch
/cc @kevinzenghu

--- a/public/js/components/Landing/Landing.sass
+++ b/public/js/components/Landing/Landing.sass
@@ -12,8 +12,10 @@
   position: relative
 
   flex-grow: 1
-  display: flex
-  flex-direction: column
+
+  &.landingPageProjects
+    display: flex
+    flex-direction: column
 
   &:before
     background: url("http://i.imgur.com/rqcfgEV.jpg") no-repeat
